Updated: Fix inCaseOfDispute alignment

--- a/src/components/common/ContractSetCaseDispute/ContractSetCaseDispute.scss
+++ b/src/components/common/ContractSetCaseDispute/ContractSetCaseDispute.scss
@@ -14,6 +14,7 @@
 
   &__option {
     padding-bottom: 10px;
+    padding-left: 8px;
 
     label {
       cursor: pointer;
